tests/ui/resolve/path-attr-in-const-block.stderr
error: cannot find macro `foo`
  --> $DIR/path-attr-in-const-block.rs:6:19
   |
LL |         #![path = foo!()]
   |                   ^^^ not found in this scope

error: aborting due to 1 previous error

